test/sema/parameter_mutability.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s

fn mutableParam(n: i32) -> void {
  n = 1;
}

fn immutableParam(n: i32) -> void {
  n = 1;
  // CHECK: [[# @LINE - 1 ]]:5: error: 'n' cannot be mutated
}

fn main() -> void {
}
